amplify: add storage

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -28,5 +28,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "imagebox": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
