--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ amplify/mock-data
 amplify/backend/amplify-meta.json
 amplify/backend/awscloudformation
 amplify/backend/.temp
+amplify/team-provider-info.json
 build/
 dist/
 node_modules/
@@ -41,3 +42,4 @@ amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
+team-provider-info.json
